endpoints: author books
