# routes/books.go
@@ -76,3 +76,61 @@ func (ep Endpoint) GetLatestBooks(c *fiber.Ctx) error {
 	}
 	return c.Status(200).JSON(response)
 }
+
+// @Summary View Latest Books By A Particular Author
+// @Description This endpoint views a latest books by an author
+// @Tags Books
+// @Param username path string true "Filter by Author Username"
+// @Param genre_slug query string false "Filter by Genre slug"
+// @Param tag_slug query string false "Filter by Tag slug"
+// @Success 200 {object} schemas.BooksResponseSchema
+// @Failure 400 {object} utils.ErrorResponse
+// @Router /books/author/{username} [get]
+func (ep Endpoint) GetLatestAuthorBooks(c *fiber.Ctx) error {
+	db := ep.DB
+	username := c.Params("username")
+	genreSlug := c.Query("genre_slug")
+	tagSlug := c.Query("tag_slug")
+	books, err := bookManager.GetLatest(db, genreSlug, tagSlug, username)
+	if err != nil {
+		return c.Status(404).JSON(err)
+	}
+
+	// Paginate and return books
+	paginatedData, paginatedBooks, err := PaginateQueryset(books, c, 200)
+	if err != nil {
+		return c.Status(400).JSON(err)
+	}
+	books = paginatedBooks.([]models.Book)
+	response := schemas.BooksResponseSchema{
+		ResponseSchema: ResponseMessage("Books fetched successfully"),
+		Data: schemas.BooksResponseDataSchema{
+			PaginatedResponseDataSchema: *paginatedData,
+		}.Init(books),
+	}
+	return c.Status(200).JSON(response)
+}
+
+// @Summary Create A Book
+// @Description This endpoint allows a writer to create a book
+// @Tags Books
+// @Param profile body schemas.BookCreateSchema true "Book object"
+// @Success 200 {object} schemas.BookResponseSchema
+// @Failure 400 {object} utils.ErrorResponse
+// @Router /books [post]
+// @Security BearerAuth
+func (ep Endpoint) CreateBook(c *fiber.Ctx) error {
+	// db := ep.DB
+	// author := RequestUser(c)
+
+	data := schemas.BookCreateSchema{}
+	if errCode, errData := ValidateRequest(c, &data); errData != nil {
+		return c.Status(*errCode).JSON(errData)
+	}
+	book := models.Book{}
+	response := schemas.BookResponseSchema{
+		ResponseSchema: ResponseMessage("Book created successfully"),
+		Data: schemas.BookSchema{}.Init(book),
+	}
+	return c.Status(200).JSON(response)
+}
